# boa-playground

./: .gitignore  .swcrc  Cargo.toml  Makefile  README.md  bundle.js  code.js  lib.js  main.js  main.ts
broken/: asyncArrow.js  ethers-5.7.2.umd.min.js  setTimeout.js  topLevelAwait.js
src/: main.rs  stackoverflow.rs
worker/: Cargo.toml  README.md  worker.rs  wrangler.toml
