[package]
name = "boa-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "worker.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
boa_engine = { version = "0.16", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
worker = "0.0.12"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = "s"
